Changelog
=========

0.4-dev - (unreleased)
----------------------
 * Bug fix: Added translation domain to ZCML files [voineali #4139]
 * Cleanup: of pyflakes compiler warnings [ichimdav #4141]
 * Cleanup: of pylint violations [ichimdav #4140]

0.3 - (2011-03-01)
------------------
 * Bug fix: fixed tests [tiberich #4153]

0.2 - (2011-02-18)
------------------
 * Change: update egg structure [ichimdav #2931]
 * New fancybox based video popup [thuliper, #3040]
 * Fixed bug where videos were looping [thuliper, #2664]
 * video_popup_view was appended even if it shouldn't, now it replaces any existing view_popup_view string. [vincisas]

0.1 - (2009)
------------------
 * Initial creation of package
